--- a/backend/discovery-service/src/main/resources/application.yml
+++ b/backend/discovery-service/src/main/resources/application.yml
@@ -11,6 +11,7 @@ eureka:
     fetch-registry: false
     service-url:
       default-zone: http://k3a402.p.ssafy.io:8761/eureka/
+      #default-zone: http://localhost:8761/eureka/
     
   
 logging:
