--- a/frontend/vue/package.json
+++ b/frontend/vue/package.json
@@ -22,8 +22,9 @@
         "@vue/cli-service": "~4.5.0",
         "@vue/eslint-config-prettier": "^6.0.0",
         "babel-eslint": "^10.1.0",
-        "eslint": "^6.7.2",
-        "eslint-plugin-prettier": "^3.1.3",
+        "eslint": "^6.8.0",
+        "eslint-config-prettier": "^6.14.0",
+        "eslint-plugin-prettier": "^3.1.4",
         "eslint-plugin-vue": "^6.2.2",
         "prettier": "^1.19.1",
         "sass": "^1.19.0",
