modify : dockerfile 경로 수정

--- a/backend/auth-service/Dockerfile
+++ b/backend/auth-service/Dockerfile
@@ -2,6 +2,6 @@ FROM openjdk:8-jdk-alpine
 
 VOLUME /a402
 
-COPY backend/auth-service/build/libs/*.jar auth-service.jar
+COPY build/libs/*.jar auth-service.jar
 
 ENTRYPOINT ["java", "-jar", "auth-service.jar"]
