--- a/backend/discovery-service/Dockerfile
+++ b/backend/discovery-service/Dockerfile
@@ -2,6 +2,6 @@ FROM openjdk:8-jdk-alpine
 
 VOLUME /a402
 
-COPY backend/discovery-service/build/libs/*.jar discovery-service.jar
+COPY build/libs/*.jar discovery-service.jar
 
 ENTRYPOINT ["java", "-jar", "discovery-service.jar"]
