modify : dockerfile 경로 수정

--- a/backend/gateway-service/Dockerfile
+++ b/backend/gateway-service/Dockerfile
@@ -2,6 +2,6 @@ FROM openjdk:8-jdk-alpine
 
 VOLUME /a402
 
-COPY build/libs/*.jar gateway-service.jar
+COPY backend/gateway-service/build/libs/*.jar gateway-service.jar
 
 ENTRYPOINT ["java", "-jar", "gateway-service.jar"]
