--- a/backend/video-service/src/main/resources/application.yml
+++ b/backend/video-service/src/main/resources/application.yml
@@ -17,7 +17,7 @@ spring:
       auto-commit: true
       
 mybatis:
-  type-aliases-package: com.learn.mapper
+  type-aliases-package: com.golearn.mapper
   mapper-locations:
   - classpath:/mapper/**/*Mapper.xml
   configuration:
