--- a/backend/discovery-service/src/main/resources/application.yml
+++ b/backend/discovery-service/src/main/resources/application.yml
@@ -10,8 +10,8 @@ eureka:
     register-with-eureka: false
     fetch-registry: false
     service-url:
-      default-zone: http://k3a402.p.ssafy.io:8761/eureka/
-      #default-zone: http://localhost:8761/eureka/
+      #default-zone: http://k3a402.p.ssafy.io:8761/eureka/
+      default-zone: http://localhost:8761/eureka/
     
   
 logging:
