--- a/backend/gateway-service/src/main/resources/application.yml
+++ b/backend/gateway-service/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
   application:
     name: gateway-service
   datasource:
-    url: jdbc:mysql://k3a402.p.ssafy.io:3306/ssafy?useSSL=false&characterEncoding=UTF-8&serverTimezone=UTC
+    url: jdbc:mysql://k3a402.p.ssafy.io:3306/golearn?useSSL=false&characterEncoding=UTF-8&serverTimezone=UTC
     hikari:
       connection-timeout: 20000
       minimum-idle: 5
@@ -23,8 +23,8 @@ eureka:
     register-with-eureka: true
     fetch-registry: true
     service-url:
-      defaultZone: http://k3a402.p.ssafy.io:8761/eureka
-      #defaultZone: http://localhost:8761/eureka
+      #defaultZone: http://k3a402.p.ssafy.io:8761/eureka
+      defaultZone: http://localhost:8761/eureka
       
 zuul:
   ignored-headers:
