modify : local, dev yml 분리

--- a/backend/discovery-service/src/main/resources/application-prod.yml
+++ b/backend/discovery-service/src/main/resources/application-prod.yml
@@ -10,7 +10,7 @@ eureka:
     register-with-eureka: false
     fetch-registry: false
     service-url:
-      default-zone: http://localhost:8761/eureka/
+      default-zone: http://k3a402.p.ssafy.io:8761/eureka/
     
   
 logging:
