--- a/backend/gateway-service/src/main/resources/application-prod.yml
+++ b/backend/gateway-service/src/main/resources/application-prod.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8801
+  port: 8803
   
 spring:
   application:
@@ -23,7 +23,7 @@ eureka:
     register-with-eureka: true
     fetch-registry: true
     service-url:
-      defaultZone: http://localhost:8761/eureka
+      defaultZone: http://k3a402.p.ssafy.io:8761/eureka
       
 zuul:
   ignored-headers:
