--- a/backend/discovery-service/Dockerfile
+++ b/backend/discovery-service/Dockerfile
@@ -4,4 +4,4 @@ VOLUME /a402
 
 COPY backend/discovery-service/build/libs/*.jar discovery-service.jar
 
-ENTRYPOINT ["java", "-jar", "discovery-service.jar"]
+ENTRYPOINT ["java", "-jar", "-Dspring.profiles.active=prod", "discovery-service.jar"]
