modify : Dockerfile 수정

--- a/backend/gateway-service/Dockerfile
+++ b/backend/gateway-service/Dockerfile
@@ -4,4 +4,4 @@ VOLUME /a402
 
 COPY backend/gateway-service/build/libs/*.jar gateway-service.jar
 
-ENTRYPOINT ["java", "-jar", "gateway-service.jar"]
+ENTRYPOINT ["java", "-Dspring.profiles.active=prod", "-jar", "gateway-service.jar"]
