modify : yml 수정

--- a/backend/auth-service/src/main/resources/application-prod.yml
+++ b/backend/auth-service/src/main/resources/application-prod.yml
@@ -27,6 +27,8 @@ eureka:
     fetch-registry: true
     service-url:
       defaultZone: http://k3a402.p.ssafy.io:8761/eureka
+  instance:
+    prefer-ip-address: true
       
 logging:
   pattern:
