--- a/backend/discovery-service/src/main/resources/application.yml
+++ b/backend/discovery-service/src/main/resources/application.yml
@@ -11,7 +11,8 @@ eureka:
     fetch-registry: false
     service-url:
       default-zone: http://localhost:8761/eureka/
-    
+  instance:
+    prefer-ip-address: true
   
 logging:
   pattern:
