--- a/backend/gateway-service/src/main/resources/application-prod.yml
+++ b/backend/gateway-service/src/main/resources/application-prod.yml
@@ -24,6 +24,8 @@ eureka:
     fetch-registry: true
     service-url:
       defaultZone: http://k3a402.p.ssafy.io:8761/eureka
+  instance:
+    prefer-ip-address: true
       
 zuul:
   ignored-headers:
