--- a/backend/gateway-service/src/main/resources/application.yml
+++ b/backend/gateway-service/src/main/resources/application.yml
@@ -24,7 +24,9 @@ eureka:
     fetch-registry: true
     service-url:
       defaultZone: http://localhost:8761/eureka
-      
+  instance:
+    prefer-ip-address: true
+    
 zuul:
   ignored-headers:
   - Access-Control-Allow-Credentials
