feat:중간 작업 푸시

--- a/backend/video-service/src/main/resources/application.yml
+++ b/backend/video-service/src/main/resources/application.yml
@@ -6,8 +6,8 @@ spring:
     name: video-service
   datasource:
     url: jdbc:mysql://k3a402.p.ssafy.io:3306/ssafy?allowPublicKeyRetrieval=true&useSSL=false&characterEncoding=UTF-8&serverTimezone=UTC&allowMultiQueries=true
-    username: 
-    password: 
+    username: root
+    password: admingolearn
     hikari:
       connection-timeout: 20000
       minimum-idle: 5
@@ -16,12 +16,19 @@ spring:
       max-lifetime: 1200000
       auto-commit: true
       
-mybatis:
-  type-aliases-package: com.golearn.mapper
-  mapper-locations:
-  - classpath:/mapper/**/*Mapper.xml
-  configuration:
-    map-underscore-to-camel-case: true
+  jpa:
+    database: mysql
+    hibernate:
+      ddl-auto: validate
+    properties:
+      hibernate:
+        show_sql: true
+        format_sql: true
+        use_sql_comments: true
+        dialect: org.hibernate.dialect.MySQL5InnoDBDialect
+        char_set:
+    generate-ddl: true
+
   
 eureka:
   client:
