--- a/backend/auth-service/build.gradle
+++ b/backend/auth-service/build.gradle
@@ -23,6 +23,8 @@ dependencies {
 	compile group: 'com.auth0', name: 'java-jwt', version: '3.10.3'
 	compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.21'
 	compile group: 'org.mybatis.spring.boot', name: 'mybatis-spring-boot-starter', version: '1.3.2'
+	compile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
+	
 	
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
