--- a/backend/gateway-service/build.gradle
+++ b/backend/gateway-service/build.gradle
@@ -25,7 +25,7 @@ dependencies {
 	compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.21'
 	compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
 	compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
-	
+	compile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
 	
 	
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
