--- a/backend/account-service/Dockerfile
+++ b/backend/account-service/Dockerfile
@@ -4,4 +4,4 @@ VOLUME /a402
 
 COPY backend/account-service/build/libs/*.jar account-service.jar
 
-ENTRYPOINT ["java", "-jar", "account-service.jar"]
+ENTRYPOINT ["java", "-Dspring.profiles.active=prod", "-jar", "account-service.jar"]
