--- a/backend/search-service/Dockerfile
+++ b/backend/search-service/Dockerfile
@@ -4,4 +4,4 @@ VOLUME /a402
 
 COPY backend/search-service/build/libs/*.jar search-service.jar
 
-ENTRYPOINT ["java", "-jar", "search-service.jar"]
+ENTRYPOINT ["java", "-Dspring.profiles.active=prod", "-jar", "search-service.jar"]
