fix: docker file

--- a/backend/course-service/Dockerfile
+++ b/backend/course-service/Dockerfile
@@ -4,4 +4,4 @@ VOLUME /a402
 
 COPY backend/course-service/build/libs/*.jar course-service.jar
 
-ENTRYPOINT ["java", "-jar", "course-service.jar"]
+ENTRYPOINT ["java", "-Dspring.profiles.active=prod", "-jar", "course-service.jar"]
