--- a/backend/video-service/src/main/resources/application.yml
+++ b/backend/video-service/src/main/resources/application.yml
@@ -15,7 +15,8 @@ spring:
       idle-timeout: 300000
       max-lifetime: 1200000
       auto-commit: true
-      
+  jackson:
+    property-naming-strategy: SNAKE_CASE
   jpa:
     database: mysql
     hibernate:
