--- a/backend/video-service/build.gradle
+++ b/backend/video-service/build.gradle
@@ -22,6 +22,9 @@ dependencies {
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	compile("org.springframework.boot:spring-boot-starter-data-jpa")
 
+	compile('org.springframework.boot:spring-boot-starter-aop')
+	compile group: 'com.google.guava', name: 'guava', version: '18.0'
+
 	compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.21'
 	compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
 
