modify : dockerfile, yml 수정

--- a/backend/board-service/Dockerfile
+++ b/backend/board-service/Dockerfile
@@ -4,4 +4,4 @@ VOLUME /a402
 
 COPY backend/board-service/build/libs/*.jar board-service.jar
 
-ENTRYPOINT ["java", "-jar", "board-service.jar"]
+ENTRYPOINT ["java", "-Dspring.profiles.active=prod", "-jar", "board-service.jar"]
