feat: 알림 보내기 추가
팩토리 메서드 패턴으로 알림 추가할때 여러 타입 받을 수 있게 설정
netflix feign 이용해서 msa통신

S03P31A402-97

--- a/backend/notification-service/build.gradle
+++ b/backend/notification-service/build.gradle
@@ -28,6 +28,8 @@ dependencies {
 	compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.21'
 	compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
 
+	compile("org.springframework.cloud:spring-cloud-starter-openfeign")
+
 	compileOnly 'org.projectlombok:lombok:1.18.16'
 	annotationProcessor 'org.projectlombok:lombok:1.18.16'
 
@@ -39,6 +41,7 @@ dependencies {
 dependencyManagement {
 	imports {
 		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+
 	}
 }
 
