--- a/backend/course-service/src/main/resources/application.yml
+++ b/backend/course-service/src/main/resources/application.yml
@@ -21,6 +21,8 @@ spring:
         show_sql: true
         format_sql: true
         use_sql_comments: true
+  jackson:
+    property-naming-strategy: SNAKE_CASE
 
 mybatis:
   type-aliases-package: com.cloud.mapper
