--- a/backend/search-service/src/main/resources/application.yml
+++ b/backend/search-service/src/main/resources/application.yml
@@ -15,6 +15,8 @@ spring:
       idle-timeout: 300000
       max-lifetime: 1200000
       auto-commit: true
+  jackson:
+    property-naming-strategy: SNAKE_CASE
       
 mybatis:
   type-aliases-package: com.golearn.mapper
