feat: 메인페이지 코스 목록 구현

--- a/frontend/Android/app/build.gradle
+++ b/frontend/Android/app/build.gradle
@@ -8,7 +8,7 @@ android {
 
     defaultConfig {
         applicationId "kr.co.golearn"
-        minSdkVersion 16
+        minSdkVersion 21
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
@@ -35,12 +35,16 @@ dependencies {
     testImplementation 'junit:junit:4.13.1'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-    implementation 'android.arch.lifecycle:extensions:1.1.1'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
 
     // 머티리얼 디자인 라이브러리
     implementation 'com.rengwuxian.materialedittext:library:2.1.4'
     implementation 'com.jakewharton:butterknife:10.2.3'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.3'
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
+    // 이미지 관련
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 
     // 통신 라이브러리
     implementation 'com.squareup.retrofit2:retrofit:2.6.2'
@@ -49,4 +53,5 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.squareup.retrofit2:converter-scalars:2.1.0'
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.2.0'
+
 }
