--- a/backend/video-service/Dockerfile
+++ b/backend/video-service/Dockerfile
@@ -4,4 +4,4 @@ VOLUME /a402
 
 COPY backend/video-service/build/libs/*.jar video-service.jar
 
-ENTRYPOINT ["java", "-jar", "video-service.jar"]
+ENTRYPOINT ["java", "-Dspring.profiles.active=prod", "-jar", "video-service.jar"]
