feat : aws s3 file upload

--- a/backend/file-service/Dockerfile
+++ b/backend/file-service/Dockerfile
@@ -4,4 +4,4 @@ VOLUME /a402
 
 COPY backend/file-service/build/libs/*.jar file-service.jar
 
-ENTRYPOINT ["java", "-jar", "file-service.jar"]
+ENTRYPOINT ["java", "-Dspring.profiles.active=prod", "-jar", "file-service.jar"]
