--- a/backend/file-service/src/main/resources/application-prod.yml
+++ b/backend/file-service/src/main/resources/application-prod.yml
@@ -23,8 +23,7 @@ eureka:
     register-with-eureka: true
     fetch-registry: true
     service-url:
-      #defaultZone: http://k3a402.p.ssafy.io:8761/eureka
-      defaultZone: http://localhost:8761/eureka
+      defaultZone: http://k3a402.p.ssafy.io:8761/eureka
   instance:
     instance-id: file-service
     prefer-ip-address: true
