--- a/frontend/vue/package.json
+++ b/frontend/vue/package.json
@@ -10,6 +10,7 @@
     "dependencies": {
         "axios": "^0.20.0",
         "core-js": "^3.6.5",
+        "moment": "^2.29.1",
         "tiptap": "^1.30.0",
         "tiptap-extensions": "^1.33.2",
         "vue": "^2.6.11",
