--- a/frontend/vue/package.json
+++ b/frontend/vue/package.json
@@ -10,9 +10,11 @@
     "dependencies": {
         "axios": "^0.20.0",
         "core-js": "^3.6.5",
+        "swiper": "^5.3.7",
         "tiptap": "^1.30.0",
         "tiptap-extensions": "^1.33.2",
         "vue": "^2.6.11",
+        "vue-awesome-swiper": "^4.1.1",
         "vue-router": "^3.2.0",
         "vuedraggable": "^2.24.3",
         "vuetify": "^2.2.11",
