feat: 회원가입, 로그인 store 설정
- 파일 업로드 api 추가
- 회원가입시 중복체크 api 추가
- validator 2개 import

--- a/frontend/vue/package.json
+++ b/frontend/vue/package.json
@@ -10,6 +10,8 @@
     "dependencies": {
         "axios": "^0.20.0",
         "core-js": "^3.6.5",
+        "email-validator": "^2.0.4",
+        "password-validator": "^5.1.0",
         "swiper": "^5.3.7",
         "tiptap": "^1.30.0",
         "tiptap-extensions": "^1.33.2",
