--- a/frontend/Android/app/src/main/AndroidManifest.xml
+++ b/frontend/Android/app/src/main/AndroidManifest.xml
@@ -12,9 +12,20 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.DoLearn">
-        <activity android:name=".view.main.channel.ChannelActivity"></activity>
+        <activity
+            android:name=".view.video.ReplyBottomFragment"
+            android:theme="@android:style/Theme.Material.Light.Dialog"/>
+        <activity
+            android:name=".view.video.CommentReplyBottomFragment"
+            android:theme="@android:style/Theme.Material.Light.Dialog" />
+        <activity
+            android:name=".view.video.VideoActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize" />
+        <activity android:name=".view.main.channel.ChannelActivity" />
         <activity android:name=".view.account.JoinPwActivity" />
         <activity android:name=".view.account.JoinIdActivity" />
+        <activity android:name=".view.account.LoginActivity" />
+        <activity android:name=".view.main.MainActivity" />
         <activity android:name=".view.account.LauncherActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,8 +33,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".view.account.LoginActivity" />
-        <activity android:name=".view.main.MainActivity" />
     </application>
 
 </manifest>
