--- a/backend/account-service/src/main/resources/application-prod.yml
+++ b/backend/account-service/src/main/resources/application-prod.yml
@@ -17,6 +17,17 @@ spring:
       auto-commit: true
   jackson:
     property-naming-strategy: SNAKE_CASE
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: gospec123@gmail.com
+    password: gospec123!@#
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
       
 mybatis:
   type-aliases-package: com.golearn.mapper
