--- a/backend/account-service/src/main/resources/application.yml
+++ b/backend/account-service/src/main/resources/application.yml
@@ -17,6 +17,17 @@ spring:
       auto-commit: true
   jackson:
     property-naming-strategy: SNAKE_CASE
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: gospec123@gmail.com
+    password: gospec123!@#
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
       
 mybatis:
   type-aliases-package: com.golearn.mapper
@@ -34,7 +45,7 @@ eureka:
   instance:
     instance-id: account-service
     prefer-ip-address: true
-      
+    
 logging:
   pattern:
     console: "%d{HH:mm:ss.SSS} %-5level %logger{36} - %msg%n"
