--- a/backend/course-service/build.gradle
+++ b/backend/course-service/build.gradle
@@ -24,6 +24,8 @@ dependencies {
 	compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.21'
 	compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
 	
+	compile("org.springframework.cloud:spring-cloud-starter-openfeign")
+	
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'	
 	
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
