--- a/frontend/vue/package.json
+++ b/frontend/vue/package.json
@@ -10,14 +10,15 @@
     "dependencies": {
         "axios": "^0.20.0",
         "core-js": "^3.6.5",
-        "moment": "^2.29.1",
-        "swiper": "^5.2.0",
         "email-validator": "^2.0.4",
+        "moment": "^2.29.1",
         "password-validator": "^5.1.0",
+        "swiper": "^5.2.0",
         "tiptap": "^1.30.0",
         "tiptap-extensions": "^1.33.2",
         "vue": "^2.6.11",
         "vue-awesome-swiper": "^4.1.1",
+        "vue-image-picker": "0.0.1-3",
         "vue-router": "^3.2.0",
         "vuedraggable": "^2.24.3",
         "vuetify": "^2.2.11",
