--- a/frontend/Android/app/src/main/AndroidManifest.xml
+++ b/frontend/Android/app/src/main/AndroidManifest.xml
@@ -1,24 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="kr.co.golearn">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_launcher_ver1"
         android:label="@string/app_name"
         android:networkSecurityConfig="@xml/network_security_config"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/ic_launcher_ver1_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.DoLearn">
         <activity android:name=".view.course.CourseIndexActivity"></activity>
         <activity
             android:name=".view.video.ReplyBottomFragment"
-            android:theme="@android:style/Theme.Material.Light.Dialog" />
+            android:theme="@android:style/Theme.Material.Light.Dialog"
+            tools:ignore="Instantiatable" />
         <activity
             android:name=".view.video.CommentReplyBottomFragment"
-            android:theme="@android:style/Theme.Material.Light.Dialog" />
+            android:theme="@android:style/Theme.Material.Light.Dialog"
+            tools:ignore="Instantiatable" />
         <activity
             android:name=".view.video.VideoActivity"
             android:configChanges="orientation|keyboardHidden|screenSize" />
