--- a/frontend/vue/package.json
+++ b/frontend/vue/package.json
@@ -13,6 +13,7 @@
         "tiptap": "^1.30.0",
         "tiptap-extensions": "^1.33.2",
         "vue": "^2.6.11",
+        "vue-moment": "^4.1.0",
         "vue-router": "^3.2.0",
         "vuedraggable": "^2.24.3",
         "vuetify": "^2.2.11",
