--- a/frontend/vue/package.json
+++ b/frontend/vue/package.json
@@ -8,6 +8,7 @@
         "lint": "vue-cli-service lint"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-free": "^5.15.1",
         "axios": "^0.20.0",
         "core-js": "^3.6.5",
         "tiptap": "^1.30.0",
