--- a/backend/file-service/src/main/resources/application-prod.yml
+++ b/backend/file-service/src/main/resources/application-prod.yml
@@ -2,12 +2,9 @@ server:
   port: 8808
   ssl:
     enabled: true
-    key-store: keystore.pkcs12
+    key-store: /home/ubuntu/key/keystore.p12
     key-store-type: pkcs12
     key-store-password: golearn
-    key-alias: golearn
-    trust-store: keytrust.pkcs12
-    trust-store-password: golearn
   
   
 spring:
