fix:알림 유저 닉네임, 프로필

--- a/backend/notification-service/src/main/resources/application.yml
+++ b/backend/notification-service/src/main/resources/application.yml
@@ -51,6 +51,8 @@ feign:
 #    url: http://localhost:8801/video
   board-api:
     url: https://golearn.co.kr/api/board
+  account-api:
+    url: https://golearn.co.kr/api/account
 
 
 logging:
