--- a/backend/course-service/build.gradle
+++ b/backend/course-service/build.gradle
@@ -26,8 +26,21 @@ dependencies {
 	
 	compile("org.springframework.cloud:spring-cloud-starter-openfeign")
 	
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'	
-	
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	compileOnly 'org.projectlombok:lombok:1.18.16'
+	annotationProcessor 'org.projectlombok:lombok:1.18.16'
+
+	compile('org.apache.mahout:mahout-integration:0.13.0') {
+		exclude group: 'org.apache.hbase'
+		exclude group: 'org.apache.hadoop'
+		exclude group: 'org.apache.lucene'
+		exclude group: 'org.apache.solr'
+		exclude group: 'com.thoughtworks.xstream'
+		exclude group: 'commons-cli'
+		exclude group: 'log4j', module: 'log4j'
+		exclude group: 'org.slf4j', module: 'slf4j-log4j12'
+	}
+
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
